--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy
-pandas
-tensorflow
-streamlit
-cv2
-PIL
+numpy==1.24.3
+pandas==2.3.2
+tensorflow==2.15.0
+streamlit==1.49.1
+opencv-python==4.12.0.88
+Pillow==11.3.0
 io
