--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.26.4
-pandas==2.2.2
-tensorflow==2.13.0
-streamlit==1.28.1
-opencv-python-headless==4.8.1.78
-Pillow==9.5.0
+numpy==1.24.3
+pandas==2.3.2
+tensorflow==2.15.0
+streamlit==1.49.1
+opencv-python==4.12.0.88
+Pillow==11.3.0
